input and button create

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <form>
-        <!-- imie -->
-        <!-- nazwisko -->
-        <!-- przycisk -->
+        <input id="name" type="text" /> <!-- imie -->
+        <input id="surname" type="text" /><!-- nazwisko -->
+        <button onclick=Add()>Add</button><!-- przycisk -->
     </form>
 
     <section>
