Added table with name and surname. Added css style for table.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     </form>
 
     <section>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Surname</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
         <!-- lista z osobami -->
     </section>
 </body>
