added function add

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Git Tutorial</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="./jquery-3.3.1.min.js"></script>
     <script src="main.js"></script>
 </head>
 
@@ -14,7 +15,7 @@
     <form>
         <input id="name" type="text" /> <!-- imie -->
         <input id="surname" type="text" /><!-- nazwisko -->
-        <button onclick=Add()>Add</button><!-- przycisk -->
+        <button type="button" onclick=add()>Add</button><!-- przycisk -->
     </form>
 
     <section>
