set up function generateList() and added to window.onloade

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Git Tutorial</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="./jquery-3.3.1.min.js"></script>
     <script src="main.js"></script>
 </head>
 
@@ -25,7 +26,8 @@
                     <th>Surname</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="tbody">
+
             </tbody>
         </table>
         <!-- lista z osobami -->
