bug fixing - addPerson

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <form>
             <input id="name" type="text" /> <!-- imie -->
             <input id="surname" type="text" /><!-- nazwisko -->
-            <button type="button" onclick=add()>Add</button><!-- przycisk -->
+            <button type="button" onclick=addPerson()>Add</button><!-- przycisk -->
         </form>
     </section>
 
