paginacja - in progres

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </section>
 
     <section class="form">
+
         <table>
             <thead>
                 <tr>
@@ -42,7 +43,15 @@
             </tbody>
         </table>
         <!-- lista z osobami -->
+
+        <select>
+            <option value="10">10</option>
+            <option value="20">20</option>
+            <option value="50">50</option>
+            <option value="All">All</option>
+        </select>
     </section>
+
 </body>
 
 </html>
