--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </table>
         <!-- lista z osobami -->
 
-        <select>
+        <select id="paginationNumber">
             <option value="10">10</option>
             <option value="20">20</option>
             <option value="50">50</option>
