--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             <option value="50">50</option>
             <option value="All">All</option>
         </select>
+
+        <div id="paginationPages"></div>
     </section>
 
 </body>
