--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
         <form>
             <input id="name" type="text" placeholder="Name" /> <br />
             <input id="surname" type="text" placeholder="Surname" /><br />
-            <select id="gender">
+            <select id="gender" required>
+                <option selected value="default" id="chooseGender">Choose gender</option>
                 <option value="Male" id="male">Male</option>
                 <option value="Female" id="female">Female</option>
             </select><br />
-            <input id="phoneNumber" type="tel" placeholder="Phone Number" /><br />
+            <input id="phoneNumber" type="number" placeholder="Phone Number" /><br />
             <input id="email" type="email" placeholder="Email addres" /><br />
             <button type="button" onclick=addPerson()>Add</button>
         </form>
