--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </select><br />
             <input id="phoneNumber" type="tel" placeholder="Phone Number" /><br />
             <input id="email" type="email" placeholder="Email addres" /><br />
-            <button type="button" onclick=addPerson()>Add</button>
+            <button type="button" onclick="addPerson();">Add</button>
         </form>
     </section>
 
@@ -38,20 +38,31 @@
         <table>
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Surname</th>
-                    <th>Gender</th>
-                    <th>Phone Number</th>
-                    <th>Email address</th>
-                    <th>Creation date</th>
+                    <th>
+                        <button class="sortButtons" value="name">Name</button>
+                    </th>
+                    <th>
+                        <button class="sortButtons" value="surname">Surname</button>
+                    </th>
+                    <th>
+                        <button class="sortButtons" value="gender">Gender</button>
+                    </th>
+                    <th>
+                        <button class="sortButtons" value="phoneNumber">Phone Number</button>
+                    </th>
+                    <th>
+                        <button class="sortButtons" value="email">Email address</button>
+                    </th>
+                    <th>
+                        <button class="sortButtons" value="currentData">Creation date</button>
+                    </th>
                 </tr>
             </thead>
             <tbody id="tbody">
 
             </tbody>
         </table>
-        <!-- lista z osobami -->
-    </section>
+
 </body>
 
 </html>
