--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
 
             </tbody>
         </table>
-<<<<<<< HEAD
-=======
         <!-- lista z osobami -->
 
         <select id="paginationNumber">
@@ -77,8 +75,7 @@
 
         <div id="paginationPages"></div>
     </section>
->>>>>>> origin/master
-
+</div>
 </body>
 
 </html>
